--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,4 @@ jobs:
         pip install faker
     - name: Analysing the code with pylint
       run: |
-        pylint --errors-only --disable=C,I,R $(git ls-files '*.py')
+        pylint --disable=C,I,R $(git ls-files '*.py')
